NIFI-14260: ParquetReader can't handle timestamps stored as INT96 type